# smartShield-AI

./: .gitignore  CMakeLists.txt  dpi_live_fixed  flow_dataset.csv  setup_blocking.sh
ML/: category_encoder.pkl  check_model.py  domain_encoder.pkl  domain_lookup.pkl  expand_dataset.py  feature_cols.pkl  ml_server.py  mlserver.py  protocol_encoder.pkl  smartshield_model.pkl:Zone.Identifier  test_model.py  train_model.py
backend/: blocked_domains.json  config.py  domain_categories.db  dpi_client.py  main.py  requirements.txt  websocket_manager.py
backend/models/: rule_models.py  stats_models.py
backend/routes/: classifier.py  domains.py  flows.py  mode.py  rules.py  stats.py
backend/services/: blocking_service.py  domain_enforcer.py  mode_service.py  rule_service.py  stats_service.py  website_classifier.py
backend/utils/: logger.py
dpi-engine/: CMakeLists.txt  dpi_live  dpi_live_debug  dpi_live_fixed  flow_dataset.csv
dpi-engine/data/: flow_dataset.csv  flow_dataset2.csv
dpi-engine/include/: connection_tracker.h  control_interface.h  dns_cache.h  dpi_engine.h  fast_path.h  flow_csv_writer.h  nfqueue_capture.h  sni_extractor.h  types.h
dpi-engine/src/: connection_tracker.cpp  control_interface.cpp  dpi_engine.cpp  fast_path.cpp  flow_csv_writer.cpp  load_balancer.cpp  main_live.cpp  nfqueue_capture.cpp  rule_manager.cpp  sni_extractor.cpp  types.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css
frontend/src/components/: AIDetectionPanel.tsx  AlertsPanel.tsx  BlockedSites.tsx  CategoryChart.tsx  ControlBar.tsx  DashboardHeader.tsx  LiveFlowStream.tsx  ModeSelector.tsx  StatsCards.tsx  TrafficChart.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: socketService.ts
frontend/src/types/: index.ts
frontend/src/utils/: dataFormatter.ts
include/: live_capture.h  types.h
src/: dpi_engine.cpp  live_capture.cpp  main_live.cpp
